--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
-  "functions": {
-    "api/lead.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "rewrites": [
     {
       "source": "/api/lead",
-      "destination": "/api/lead.js"
+      "destination": "/pages/api/lead.js"
     }
   ]
 }
