--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.16"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -27,4 +28,3 @@
     "vite": "^5.0.8"
   }
 }
-
